Fixed categories page topbar height on mobile

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3572,15 +3572,6 @@ section.slice {
   margin-bottom: 5%;
   width: 75%;
 }
-/*-----------------------------------*/
-
-/* Style for Category page sorting topbar */
-
-/*-----------------------------------*/
-.sorting-topbar {
-  height: 50px;
-  line-height: 50px;
-}
 
 /*-----------------------------------*/
 /*-----------------------------------*/
